@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.5.10-cur, done by cs@nop.
--;-;-;2022-05-10 05:04:33, took 00:08:13, with 80 workers, on 2878 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2022-05-10 05:18:47, took 00:08:20, with 80 workers, on 2878 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.org/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
