@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.5.10-cur, done by cs@nop.<br/>
-tested: 2022-05-10 05:04:33, took 00:08:13, with 80 workers, on 2878 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2022-05-10 05:18:47, took 00:08:20, with 80 workers, on 2878 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
